@@ -1,3 +1,4 @@
+Build a Fraction: Numbers: Fixed: hitting "reset" when the sim starts up causes the fraction outline to move
 > Made sound on by default for Fraction Matcher
 # 1.00.39 (67048) Aug 15, 2012
 Build a Fraction: Fixed: Dotted lines don't always make sense and 2/2 and 3/3 targets not shown on level 1 shapes, see #3397 comment 15 item 3
